[gd_scene load_steps=9 format=3 uid="uid://ba0gtikn7kqqp"]

[ext_resource type="Texture2D" uid="uid://c3urdfdp3iala" path="res://Assets/UI/Buttons/Button_Hover_3Slides.png" id="1_dcj0t"]
[ext_resource type="FontFile" uid="uid://ckokmluf2sw7q" path="res://Fonts/IMFellEnglish-Regular.ttf" id="1_godbx"]
[ext_resource type="Script" path="res://Main Logic/start_scene.gd" id="1_xiqam"]
[ext_resource type="Texture2D" uid="uid://6fphagbmpl0f" path="res://Assets/UI/Buttons/Button_Disable_3Slides.png" id="2_xo1ju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlq3l"]
bg_color = Color(0.501845, 0.632409, 0.607038, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u773t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0f8fm"]
texture = ExtResource("1_dcj0t")
texture_margin_left = 30.0
texture_margin_top = 20.0
texture_margin_right = 30.0
texture_margin_bottom = 35.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7n20"]
texture = ExtResource("2_xo1ju")
texture_margin_left = 30.0
texture_margin_top = 20.0
texture_margin_right = 30.0
texture_margin_bottom = 35.0

[node name="Start Scene" type="CanvasLayer"]
script = ExtResource("1_xiqam")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hlq3l")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -144.0
offset_right = 279.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_u773t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y7n20")
theme_override_styles/normal = SubResource("StyleBoxTexture_0f8fm")
text = "Continue"

[node name="New Game" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_u773t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y7n20")
theme_override_styles/normal = SubResource("StyleBoxTexture_0f8fm")
text = "New Game"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_u773t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y7n20")
theme_override_styles/normal = SubResource("StyleBoxTexture_0f8fm")
text = "Settings"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_colors/font_color = Color(0.117647, 0.227451, 0.541176, 1)
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_u773t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/hover = SubResource("StyleBoxTexture_0f8fm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y7n20")
theme_override_styles/normal = SubResource("StyleBoxTexture_0f8fm")
text = "Quit"

[node name="Castle" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 32.0
offset_right = 752.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 280
text = "Castle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Conquest" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1138.0
offset_right = -32.0
offset_bottom = 356.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_godbx")
theme_override_font_sizes/font_size = 280
text = "Conquest"

[connection signal="pressed" from="Panel/VBoxContainer/Continue" to="." method="Continue_Game"]
[connection signal="pressed" from="Panel/VBoxContainer/New Game" to="." method="Start_New_Game"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="Game_Settings"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="Quit_Game"]
